--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section id="about" class="about">
       <h3>About this demo</h3>
-      <p>This is a static demo site for Practical 3: Hosting a Static Website in the Cloud. It simulates an online recharge shop for game diamonds. No purchases are real — it only demonstrates a static front-end with simple cart logic.</p>
+      <p>This is a simple static demo site: Hosting a Static Website in the Cloud. It simulates an online recharge shop for game diamonds. No purchases are real — it only demonstrates a static front-end with simple cart logic.</p>
     </section>
   </main>
 
