--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
     <h2>Popular Diamond Packs</h2>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1622288436322-52e8e1f1f1bb?auto=format&fit=crop&w=500&q=80" alt="Diamonds Pack">
+      <img src="https://i.ibb.co/7YtC9wV/diamonds.jpg" alt="Diamonds Pack"> alt="Diamonds Pack">
       <h3>💎 100 Diamonds</h3>
       <p>Price: ₹80</p>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b6?auto=format&fit=crop&w=500&q=80" alt="Big Pack">
+      <img src="https://i.ibb.co/7YtC9wV/diamonds.jpg" alt="Diamonds Pack">
       <h3>💎 500 Diamonds</h3>
       <p>Price: ₹350</p>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1590608897129-79da98d159d0?auto=format&fit=crop&w=500&q=80" alt="Mega Pack">
+      <img src="https://i.ibb.co/7YtC9wV/diamonds.jpg" alt="Diamonds Pack" alt="Mega Pack">
       <h3>💎 1000 Diamonds</h3>
       <p>Price: ₹650</p>
     </div>
