--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
     <h2>Popular Diamond Packs</h2>
 
     <div class="card">
-      <img src="https://i.ibb.co/7YtC9wV/diamonds.jpg" alt="Diamonds Pack"> alt="Diamonds Pack">
+      <img src="images/diamond1.jpg"alt="Diamonds Pack">
       <h3>💎 100 Diamonds</h3>
       <p>Price: ₹80</p>
     </div>
 
     <div class="card">
-      <img src="https://i.ibb.co/7YtC9wV/diamonds.jpg" alt="Diamonds Pack">
+      <img src="images/Diamond2.jpg" alt="Diamonds Pack">
       <h3>💎 500 Diamonds</h3>
       <p>Price: ₹350</p>
     </div>
 
     <div class="card">
-      <img src="https://i.ibb.co/7YtC9wV/diamonds.jpg" alt="Diamonds Pack" alt="Mega Pack">
+      <img src="images/diamond3.jpg" alt="Mega Pack">
       <h3>💎 1000 Diamonds</h3>
       <p>Price: ₹650</p>
     </div>
