--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: #fff;
-      text-align: center;
+  font-family: Arial, sans-serif;
+  background: url("images/background.jpg") no-repeat center center fixed; /* <- your file */
+  background-size: cover;
+  color: #fff;
+  text-align: center;
+
     }
     header {
       background: linear-gradient(45deg, #1e1e2f, #292946);
