--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
   font-family: Arial, sans-serif;
-  background: url("images/background.jpg") no-repeat center center fixed; /* <- your file */
+  background: url("images/background.jpg") no-repeat center center; 
   background-size: cover;
   color: #fff;
   text-align: center;
