--- a/index.html
+++ b/index.html
@@ -71,6 +71,31 @@
       font-size: 0.9rem;
       color: #888;
     }
+    /* 📱 Mobile adjustments */
+@media (max-width: 600px) {
+  header {
+    font-size: 1.5rem; /* smaller header text */
+    padding: 15px;
+  }
+
+  .banner {
+    font-size: 1.8rem; /* reduce banner text */
+    height: 250px; /* shorter banner */
+  }
+
+  .card {
+    width: 90%;  /* cards take almost full width */
+    margin: 15px auto; /* center cards on small screens */
+  }
+
+  .card h3 {
+    font-size: 1.2rem;
+  }
+
+  .card p {
+    font-size: 0.9rem;
+  }
+}
   </style>
 </head>
 <body>
