--- a/index.html
+++ b/index.html
@@ -127,7 +127,28 @@
       <p>Price: ₹420</p>
     </div>
   </div>
+  
+    <div class="card">
+      <img src="images/diamond4.jpg" alt="Mega Pack">
+      <h3>💎 500 Diamonds</h3>
+      <p>Price: ₹750</p>
+    </div>
+  </div>
 
+      <div class="card">
+      <img src="images/diamond5.jpg" alt="Mega Pack">
+      <h3>💎 1500 Diamonds</h3>
+      <p>Price: ₹2019</p>
+    </div>
+  </div>
+  
+      <div class="card">
+      <img src="images/diamond6.jpg" alt="Mega Pack">
+      <h3>💎 6000 Diamonds</h3>
+      <p>Price: ₹859</p>
+    </div>
+  </div>
+  
   <footer>
     © 2025 Gaming Shop | All Rights Reserved
   </footer>
