--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
   </div>
   
     <div class="card">
-      <img src="images/dowload4.jpg" alt="Mega Pack">
+      <img src="images/download4.jpg" alt="Mega Pack">
       <h3>💎 500 Diamonds</h3>
       <p>Price: ₹750</p>
     </div>
   </div>
 
       <div class="card">
-      <img src="images/dowload5.jpg" alt="Mega Pack">
+      <img src="images/download5.jpg" alt="Mega Pack">
       <h3>💎 1500 Diamonds</h3>
       <p>Price: ₹2019</p>
     </div>
