--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gaming Shop - Diamond Recharge</title>
+  <title>Mobile legends Gaming Shop - Diamond Recharge</title>
   <style>
     body {
       margin: 0;
@@ -122,7 +122,7 @@
     </div>
 
     <div class="card">
-      <img src="images/diamond4.jpg" alt="Mega Pack">
+      <img src="images/download4.jpg" alt="Mega Pack">
       <h3>💎 300 Diamonds</h3>
       <p>Price: ₹420</p>
     </div>
